--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,10 @@
 <html>
 <head>
     <title>login</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
 </head>
 <body style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
     <div style="display: flex;">
