--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <script src="javascripts/game.js"></script>
 </head>
 <body style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-  <canvas style="width:640px; height:480px;" id="canvas"></canvas>
+  <canvas width="640px" height="640px;" id="canvas"></canvas>
 <!--
     <div style="display: flex;">
     <% allPath.forEach(function(value, key){ %>
